[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/UI/DialogBox.png" type="Texture" id=1]
[ext_resource path="res://FX/RichTextEffects/Ghost.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/ProgressArrow.png" type="Texture" id=3]
[ext_resource path="res://Scripts/DialogBox.gd" type="Script" id=4]
[ext_resource path="res://FX/RichTextEffects/L33T.gd" type="Script" id=5]
[ext_resource path="res://FX/RichTextEffects/Rain.gd" type="Script" id=6]
[ext_resource path="res://FX/RichTextEffects/Woo.gd" type="Script" id=7]
[ext_resource path="res://FX/RichTextEffects/Cuss.gd" type="Script" id=8]
[ext_resource path="res://FX/RichTextEffects/Heart.gd" type="Script" id=9]
[ext_resource path="res://FX/RichTextEffects/Jump.gd" type="Script" id=10]
[ext_resource path="res://FX/RichTextEffects/Nervous.gd" type="Script" id=11]
[ext_resource path="res://FX/RichTextEffects/Number.gd" type="Script" id=12]
[ext_resource path="res://FX/RichTextEffects/ColorMod.gd" type="Script" id=13]
[ext_resource path="res://FX/RichTextEffects/Sparkle.gd" type="Script" id=14]
[ext_resource path="res://FX/RichTextEffects/UwU.gd" type="Script" id=15]

[sub_resource type="RichTextEffect" id=4]
script = ExtResource( 13 )

[sub_resource type="RichTextEffect" id=5]
script = ExtResource( 8 )

[sub_resource type="RichTextEffect" id=6]
script = ExtResource( 2 )

[sub_resource type="RichTextEffect" id=7]
script = ExtResource( 9 )

[sub_resource type="RichTextEffect" id=8]
script = ExtResource( 10 )

[sub_resource type="RichTextEffect" id=9]
script = ExtResource( 5 )

[sub_resource type="RichTextEffect" id=10]
script = ExtResource( 11 )

[sub_resource type="RichTextEffect" id=11]
script = ExtResource( 12 )

[sub_resource type="RichTextEffect" id=12]
script = ExtResource( 6 )

[sub_resource type="RichTextEffect" id=13]
script = ExtResource( 14 )

[sub_resource type="RichTextEffect" id=14]
script = ExtResource( 15 )

[sub_resource type="RichTextEffect" id=15]
script = ExtResource( 7 )

[sub_resource type="Animation" id=1]
resource_name = "IDLE"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.5, 1, 1.68179 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0.298039 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.698039 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Disappear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.698039 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.298039 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0 ) ]
}

[node name="DialogBox" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -114.0
margin_top = -51.0
margin_right = 114.0
margin_bottom = -6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -114.0
margin_top = -45.0
margin_right = 114.0
margin_bottom = -7.62939e-06
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -14.5
margin_right = 98.0
margin_bottom = 14.5
rect_clip_content = false
custom_colors/default_color = Color( 0.32549, 0.32549, 0.317647, 1 )
bbcode_enabled = true
scroll_active = false
custom_effects = [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressIndicator" type="Sprite" parent="Control"]
visible = false
position = Vector2( 206, 28 )
texture = ExtResource( 3 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/ProgressIndicator"]
autoplay = "IDLE"
anims/IDLE = SubResource( 1 )

[node name="Tween" type="Tween" parent="Control"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/Appear = SubResource( 2 )
anims/Disappear = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="tween_completed" from="Control/Tween" to="." method="_on_Tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
